# hypothesis-workshop

./: .gitignore  README.md  pyproject.toml
tests/: test_01_pbt_101.py  test_02_testing_properties.py  test_03_a_step_further.py
